Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-99232

REG->6.3: Linguist occasionally asserts

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P2: Important
    • 6.2.3, 6.3.0 Alpha
    • 6.3.0 Feature Freeze
    • Tools: Linguist
    • None
    • Linux/X11
    • ff2685d5a0 (qt/qttools/dev) 6a6f713844 (qt/qttools/6.3) 6ef406ab1b (qt/qttools/6.2) 6ef406ab1b (qt/tqtc-qttools/6.2) 6ef406ab1b (qt/tqtc-qttools/6.2.3) 6ef406ab1b (qt/qttools/6.2.4)

    Description

      I am seeing

      ASSERT failure in MessageEditor: "Called object is not of the correct type 
         (class destructor may have already run)", 
        file  include/QtCore/qobjectdefs_impl.h, line 155
      

      Assert introduced by "QObject: Q_ASSERT the object type before calling a PMF" 0e72a846d379ba02ff80ecac2526640a05b872b6 https://codereview.qt-project.org/c/qt/qtbase/+/381860

      Appears to be some sort of exit crash qttools/src/linguist/linguist/messageeditorwidgets.cpp:120

      FormatTextEdit::~FormatTextEdit()
      {
          emit editorDestroyed();
      }
      

      Attachments

        Issue Links

          No reviews matched the request. Check your Options in the drop-down menu of this sections header.

          Activity

            People

              kkohne Kai Köhne
              kleint Friedemann Kleint
              Votes:
              0 Vote for this issue
              Watchers:
              2 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Gerrit Reviews

                  There are no open Gerrit changes