Qt Linguist: Fix 'QObject: Q_ASSERT the object type before calling a PMF'

Make sure you disconnect the signal, otherwise it will be triggered
when the child widget is destroyed, while the editor is already
half-destructed.

Fixes: QTBUG-99232
Change-Id: I5556b6cc200a58010cab8fa2458b5c3604cbc783
Reviewed-by: Friedemann Kleint <Friedemann.Kleint@qt.io>
(cherry picked from commit ff2685d5a07f43b9618cb508ff193e6554e08cc0)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>